<?xml version='1.0' encoding='UTF-8'?>
<resources>
  <string name="app_name">Oledpro-Tracking</string>
  <string name="app_logo">Oledpro-Tracking</string>
  <string name="shortcut_start">Start service</string>
  <string name="shortcut_stop">Stop service</string>
  <string name="shortcut_sos">Send SOS</string>
  <string name="channel_default">Primary Channel</string>
  <string name="settings_id_title">Device identifier</string>
  <string name="settings_url_title">Server URL</string>
  <string name="settings_url_summary">Tracking server URL</string>
  <string name="settings_interval_title">Frequency</string>
  <string name="settings_interval_summary">Reporting interval in seconds</string>
  <string name="settings_distance_title">Distance</string>
  <string name="settings_distance_summary">Reporting distance in meters</string>
  <string name="settings_angle_title">Angle</string>
  <string name="settings_angle_summary">Reporting angle in degrees</string>
  <string name="settings_status_title">Trạng thái dịch vụ</string>
  <string name="settings_status_off">Start</string>
  <string name="settings_status_on">Stop</string>
  <string name="settings_status_off_summary">Dịch vụ tạm dừng</string>
  <string name="settings_status_on_summary">Dịch vụ đang chạy</string>
  <string name="settings_buffer">Offline buffering</string>
  <string name="settings_buffer_off_summary">Buffering off</string>
  <string name="settings_buffer_on_summary">Buffering on</string>
  <string name="settings_wakelock">Wake lock</string>
  <string name="settings_wakelock_off_summary">Wake lock off</string>
  <string name="settings_wakelock_on_summary">Wake lock on</string>
  <string name="settings_accuracy_title">Location accuracy</string>
  <string name="settings_accuracy_summary">Desired location accuracy</string>
  <string name="settings_accuracy_high">High</string>
  <string name="settings_accuracy_medium">Medium</string>
  <string name="settings_accuracy_low">Low</string>
  <string name="settings_foreground_title">Foreground service</string>
  <string name="settings_foreground_summary">Increase service priority</string>
  <string name="menu_status">Status</string>
  <string name="menu_shortcuts">Add shortcuts</string>
  <string name="menu_clear">Clear</string>
  <string name="status_service_create">Service started</string>
  <string name="status_service_destroy">Service stopped</string>
  <string name="status_send_success">Send successfully</string>
  <string name="status_send_fail">Send failed</string>
  <string name="status_location_update">Location update</string>
  <string name="status_network_online">Network online</string>
  <string name="status_network_offline">Network offline</string>
  <string name="hidden_app_name">Device Settings</string>
  <string name="hidden_alert">The app has been hidden. To open it again please dial 8722227 (TRACCAR).</string>
  <string name="error_msg_invalid_url">Please enter a valid http:// or https:// URL</string>
  <string name="disclosure_location">This app collects location data to enable live tracking even when the app is closed or not in use.</string>
</resources>
