<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <SwitchPreference
        android:defaultValue="true"
        android:key="status"
        android:summaryOff="@string/settings_status_off_summary"
        android:summaryOn="@string/settings_status_on_summary"
        android:switchTextOff="@string/settings_status_off"
        android:switchTextOn="@string/settings_status_on"
        android:title="@string/settings_status_title"
        app:isPreferenceVisible="true"
        tools:isPreferenceVisible="true" />

    <EditTextPreference
        android:key="id"
        android:title="@string/settings_id_title" />

    <EditTextPreference
        android:defaultValue="@string/settings_url_default_value"
        android:key="url"
        android:summary="@string/settings_url_summary"
        android:title="@string/settings_url_title"
        app:isPreferenceVisible="false"
        tools:isPreferenceVisible="true" />

    <ListPreference
        android:defaultValue="medium"
        android:entries="@array/settings_accuracy_names"
        android:entryValues="@array/settings_accuracy_values"
        android:key="accuracy"
        android:summary="@string/settings_accuracy_summary"
        android:title="@string/settings_accuracy_title"
        app:isPreferenceVisible="false"
        tools:isPreferenceVisible="true" />

    <EditTextPreference
        android:defaultValue="5"
        android:inputType="number"
        android:key="interval"
        android:summary="@string/settings_interval_summary"
        android:title="@string/settings_interval_title"
        app:isPreferenceVisible="true"
        tools:isPreferenceVisible="true" />

    <EditTextPreference
        android:defaultValue="0"
        android:inputType="number"
        android:key="distance"
        android:summary="@string/settings_distance_summary"
        android:title="@string/settings_distance_title"
        app:isPreferenceVisible="false" />

    <EditTextPreference
        android:defaultValue="0"
        android:inputType="number"
        android:key="angle"
        android:summary="@string/settings_angle_summary"
        android:title="@string/settings_angle_title"
        app:isPreferenceVisible="false" />

    <CheckBoxPreference
        android:defaultValue="true"
        android:key="buffer"
        android:summaryOff="@string/settings_buffer_off_summary"
        android:summaryOn="@string/settings_buffer_on_summary"
        android:title="@string/settings_buffer"
        app:isPreferenceVisible="false" />

    <CheckBoxPreference
        android:defaultValue="true"
        android:key="wakelock"
        android:summaryOff="@string/settings_wakelock_off_summary"
        android:summaryOn="@string/settings_wakelock_on_summary"
        android:title="@string/settings_wakelock"
        app:isPreferenceVisible="false" />

</PreferenceScreen>
